fix: Fix layout bugs

--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -28,6 +28,7 @@
       flex-direction: row;
       justify-content: flex-start;
       gap: 41px;
+      margin-top: 100px;
       @media only screen and (max-width: 600px) {
         margin-top: calc(640px / var(--image-ratio));
         justify-content: center;
@@ -102,7 +103,7 @@
     text-align: left;
     border-radius: 50px;
     height: 77px;
-    width: 548px;
+    width: 570px;
     background-color: var(--white);
     margin-left: 78px;
     padding: 24px 34px 24px 34px;
